--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -25,6 +25,7 @@
   border: 1px solid #dee2e6;
   border-radius: 4px;
   font-size: 1rem;
+  /* width: 95%; */
 }
 
 .todo-button {
@@ -40,4 +41,15 @@
 
 .todo-button:hover {
   background-color: #1c7ed6;
+}
+
+.todo-input.error {
+  border-color: #dc3545;
+}
+
+.error-message {
+  color: #dc3545;
+  font-size: 0.875rem;
+  margin-top: 0.25rem;
+  margin-bottom: 0.5rem;
 }
